@@ -660,6 +660,12 @@ a simple multi-database query tool just like Microsoft Query Analizer.
 Uses Gtk-PERL.
 </ul>
 
+<ul>
+<li><a href="http://terraform.sourceforge.net">Terraform</a> -
+an interactive terrain/height_field editor.
+</ul>
+
+
 
 <!-- COPY THESE LINES AND FILL IN TO ADD A NEW APP
 <ul>
